# NagaAgent

./: !config.json  .env  .gitignore  README.md  audio_diagnostic.py  check_env.py  cleanup_dependencies.py  config.json  config.json.edgetts  config.json.example  config.json.minimax  config.py  conversation_core.py  debug_mcp_handoff.py  document.html  main.py  mbti_personalities.py  mcp_manager.py  merge_report_20250717_201357.txt  nagaagent-aaai2026.aux  nagaagent-aaai2026.fdb_latexmk  nagaagent-aaai2026.fls  pyproject.toml  quick_model_manager.py  requirements.txt  setup.ps1  setup_mac.sh  smart_merge.py  start.bat  summer_requirements.txt  test_tree_thinking.py  tree_thinking_demo.py  triples.json
agent/: __init__.py  api_server.py  image_processor.py  plugin_manager.py  preprocessor.py  start_server.py
agent_configs/: example_agent.json
apiserver/: README.md  __init__.py  api_server.py  start_server.py
logs/: 2025-04-27.txt  2025-05-05.txt  2025-05-23.txt  2025-06-28.txt  2025-06-29.txt
mcpserver/: agent_manager.py  agent_manager.py.archieve  agent_manager_README.md  mcp_manager.py  mcp_registry.py
mqtt_tool/: calculator.py  calculator2.py  calculator3.py  esp32台灯.py  mcp_pipe.py  mcpmqtt.py  mqtt_tool.py  requirements.txt
paper/: README.md  anonymous-submission-latex-2026.aux  anonymous-submission-latex-2026.blg  anonymous-submission-latex-2026.fdb_latexmk  anonymous-submission-latex-2026.fls  nagaagent-aaai2026.aux  nagaagent-aaai2026.bbl  nagaagent-aaai2026.blg  nagaagent-aaai2026.fdb_latexmk  nagaagent-aaai2026.fls  nagaagent-aaai2026.tex  (+1 more)
(+62 files in other folders)
